[tool.poetry]
name = "poium"
version = "1.5.1"
description = "Page Objects design pattern test library."
authors = ["fnngj <fnngj@126.com>"]
license = "Apache-2.0"
readme = "README.md"

homepage = "https://seldomqa.github.io"
repository = "https://github.com/SeldomQA/poium"

keywords = ["selenium", "appium", "playwright"]

classifiers = [
    'Intended Audience :: Developers',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
]

[tool.poetry.dependencies]
python = "^3.8"
Appium-Python-Client = "^3.1.0"
loguru = "~0.6.0"
func-timeout = "^4.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
