[tool.poetry]
name = "poium"
version = "1.5.2"
description = "Page Objects design pattern test library."
authors = ["fnngj <fnngj@126.com>"]
license = "Apache-2.0"
readme = "README.md"

homepage = "https://seldomqa.github.io"
repository = "https://github.com/SeldomQA/poium"

keywords = ["selenium", "appium", "playwright"]

classifiers = [
    'Intended Audience :: Developers',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
]

[tool.poetry.dependencies]
python = ">=3.8"
appium-python-client = "^4.0.1"
loguru = "~0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "douban"
url = "https://pypi.doubanio.com/simple"
